tests/paczka1/fuzzy1/73592324.err
Error in line 8: SOTmFz A695 41,2
Error in line 22: SOTmFz A968 59,2
